syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

package hostsetup;

option go_package = "protos/gen/hostsetup";

service HostSetup {
    rpc SetHostname (HostnameRequest) returns (SuccessResponse) {
        option (google.api.http) = {
            post: "/hostname"
            body: "*"
        };
    }
    rpc ListDNSServers (google.protobuf.Empty) returns (ListDNSServersResponse) {
        option (google.api.http) = {
            post: "/dnsservers"
        };
    }
    rpc AddDNSServer (DNSServerRequest) returns (SuccessResponse) {
        option (google.api.http) = {
            post: "/dnsservers/adding"
            body: "*"
        };
    }
    rpc DeleteDNSServer (DNSServerRequest) returns (SuccessResponse) {
        option (google.api.http) = {
            post: "/dnsservers/deleting"
            body: "*"
        };
    }
}

message HostnameRequest {
    string name = 1;
}

message SuccessResponse {
    bool success = 1;
}

message ListDNSServersResponse {
    repeated string list = 1;
}

message DNSServerRequest {
    string dnsServer = 1;
}
